JSON data extraction JS implemented.

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -85,7 +85,7 @@ footer {
 @media screen and (min-width: 1000px) {
 
   body {
-    background-color: $color-two;
+    background-color: $color-five;
   }
 
 }
