--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,7 +4,7 @@ $color-three: darkorchid;
 $color-four: black;
 $color-five: skyblue;
 
-$base-font: "Open Sans Light";
+$base-font: "Open Sans";
 $base-font-size: 16px;
 $base-text-color: #ffffff;
 
