Sass file reorganisation

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,91 +1,1 @@
-$background-color-tablet: darkblue;
-$background-color-desktop: darkgreen;
-
-$base-font: "Open Sans", Helvetica, sans-serif;
-$base-font-size: 16px;
-$base-text-color: #ffffff;
-
-$background-color: black;
-
-$footer-text-colour: #c2c2c2;
-
-
-* {
-  box-sizing: border-box;
-  outline: none;
-}
-
-/*mobile size css*/
-
-body {
-  font-size: $base-font-size;
-  font-family: $base-font;
-  //font-weight: normal;
-  //font-style: normal;
-
-  background-color: $background-color;
-  color: $base-text-color;
-
-  //display: flex;
-  //align-items: center;
-  //justify-content: center;
-}
-
-.seo-description{
-  display: none;
-}
-
-header {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  justify-content: center;
-
-  img {
-    //max-width: 50%;
-    //height: auto;
-  }
-
-  form {
-    //text-align: center;
-    //width: 300px;
-    display: flex;
-    justify-content: center;
-    flex-flow: column nowrap;
-  }
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-
-  color: $footer-text-colour;
-
-  p span {
-    text-transform: uppercase;
-  }
-}
-
-
-
-/*tablet size css*/
-@media screen and (min-width: 600px) {
-
-  body {
-    background-color: $background-color-tablet;
-  }
-
-  header {
-    flex-flow: row;
-  }
-
-}
-
-/*desktop size css*/
-@media screen and (min-width: 1000px) {
-
-  body {
-    background-color: $background-color-desktop;
-  }
-
-}
+/* main styles */
