--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -62,8 +62,26 @@ header {
 
 main {
 
+  .newsItems {
+    display: flex;
+    flex-flow: row wrap;
+    //text-align: center;
+  }
 
+  .newsItem {
+    flex: 1 0 100%;
+    //position: relative;
 
+  }
+
+  .newsImage {
+    /*needs work*/
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+    padding-bottom: 100%;
+  }
 
 }
 
