Fixed centring bug with spinner.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,15 +22,9 @@ $footer-text-colour: #c2c2c2;
 body {
     font-size: 1rem;
     font-family: $base-font;
-    //font-weight: normal;
-    //font-style: normal;
 
     background-color: $background-color;
     color: $base-text-color;
-
-    //display: flex;
-    //align-items: center;
-    //justify-content: center;
 
     a:link {
       color: $base-text-color;
@@ -54,7 +48,7 @@ header {
   height: 90vh;
   padding: 2rem;
 
-  img {
+  .logo {
     //text-align: center;
     padding-bottom: 1rem;
     //transition: all .5s .5s ease-out;
@@ -80,23 +74,19 @@ header {
 
 main {
 
-
   .newsItems {
     display: flex;
     flex-flow: row wrap;
 
-    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
 
-    .loading {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    //margin: 0 auto;
+  }
 
-      //text-align: center;
-
-      width: 25%;
-      height: 25%;
-    }
+  .loadingImage {
+    width: 25%;
+    height: 25%;
   }
 
   .newsItem {
