--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -73,6 +73,7 @@ header {
     margin-bottom: 2rem;
 
     h2 {
+      text-align: center;
       margin-bottom: 1rem;
       font-size: 0.75rem;
     }
@@ -80,10 +81,18 @@ header {
 
   @media (min-width: 600px) {
     flex-flow: row;
+
+    .sections-form h2 {
+      text-align: left;
+    }
   }
 
   @media (min-width: 1000px) {
     justify-content: flex-start;
+
+    .sections-form h2 {
+      text-align: left;
+    }
   }
 }
 
