--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -122,6 +122,17 @@ main {
     background-size: cover;
 
     padding-bottom: 100%;
+
+    span {
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0s, opacity 0.5s linear;
+    }
+
+    &:hover > span {
+      visibility: visible;
+      opacity: 1;
+    }
   }
 
   .newsItemTextFormatting {
