--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,6 +9,7 @@ $text-colour-footer: #c2c2c2;
 
 $background-color: black;
 
+/*set base styles*/
 * {
   box-sizing: border-box;
   outline: none;
@@ -42,6 +43,7 @@ body {
   }
 }
 
+/*hide seo h1*/
 .seo-description{
   display: none;
 }
@@ -105,6 +107,7 @@ header {
   }
 }
 
+/*main section css*/
 main {
   text-align: center;
 
@@ -123,6 +126,8 @@ main {
 
   .newsItem {
     flex: 1 0 100%;
+
+    text-align: left;
   }
 
   .newsImage {
@@ -151,13 +156,11 @@ main {
   }
 
   .newsItemTextFormatting {
-    /*text positioned at bottom*/
     position: absolute;
     top: 100%;
     left: 0;
     transform: translate(0, -100%);
 
-    /*background transparent colour*/
     padding: 0.5rem;
     font-size: 1rem;
     line-height: 1.2rem;
@@ -177,6 +180,7 @@ main {
   }
 }
 
+/*footer section css*/
 footer {
   display: flex;
   align-items: center;
